created specs for tai chi config

--- a/todo
+++ b/todo
@@ -20,4 +20,8 @@
                 iphone
                 ads and analytics
                 double starting when delay is set shouldn't be allowed
+                app
+                ability to record your own voice
+                extra driller specs to cover moving sideways and direction/footchange at the same time
+                wuchi move should be fired with null front foot
             </p>
