added code to handle more complex moves and built

--- a/todo
+++ b/todo
@@ -24,4 +24,5 @@
                 ability to record your own voice
                 extra driller specs to cover moving sideways and direction/footchange at the same time
                 wuchi move should be fired with null front foot
+                tests for no limits on area and count
             </p>
