--- a/todo
+++ b/todo
@@ -25,4 +25,5 @@
                 extra driller specs to cover moving sideways and direction/footchange at the same time
                 wuchi move should be fired with null front foot
                 tests for no limits on area and count
+                change way enumerable is defined to be simple and easier to write the config
             </p>
